[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdm"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "click",
    "opencv-python==4.13.0.92",
    "scipy",
    "matplotlib",
    "trimesh",
    "pillow",
    "huggingface_hub",
    "numpy==2.4.4",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "xformers==0.0.35",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdm*"]
